Updated the text and links in index.html

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           The project enhanced surveillance capabilities and demonstrated practical application of AI/ML 
           in defense-related systems.
         </p>
-        <a href="YOUR_CERTIFICATE_LINK_HERE" target="_blank" class="btn-text">
+        <a href="https://drive.google.com/file/d/16ldMwphwTA5GqY1Ef0jCCI_9ycaafMtq/view?usp=sharing" target="_blank" class="btn-text">
           <span>View Certificate</span>
           <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
         </a>
